[package]
name = "morph-rs"
version = "0.1.0"
description = "Rust library for interfacing with the Morph InfiniConnect earbuds."
readme = "README.md"
keywords = ["earbuds", "bluetooth"]
categories = ["earbuds", "bluetooth"]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2021"
publish = false
license = "MIT"
repository = "https://github.com/morph-audio/morph-rs.git"
homepage = "https://github.com/morph-audio/morph-rs"

[lib]
name = "morphrs"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []

[dependencies]
btleplug = { version = "0.10.4", features = ["serde"] }
futures = "0.3.25"
serde = { version = "1.0.149", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] } 
uuid = { version = "1.2.2", features = ["v4"] }
flutter_rust_bridge = "*"
