[package]
name = "morph-rs"
version = "0.1.0"
description = "Rust library for interfacing with the Morph InfiniConnect earbuds."
readme = "README.md"
keywords = ["earbuds", "bluetooth"]
categories = ["earbuds", "bluetooth"]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2021"
publish = false
license = "MIT"
repository = "https://github.com/open-morphs/morph-rs.git"
homepage = "https://github.com/open-morphs/morph-rs"

[lib]
name = "morph_rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []

[dependencies]
btleplug = { version = "0.10.5", features = ["serde"] }
futures = "0.3.28"
serde = { version = "1.0.166", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.4.0", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
libdbus-sys = { version = "0.2.5", features = ["vendored"] }
